--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,8 @@
 	<script>
 	  function onSignIn(googleUser) {
 		// Get the user's ID token and basic profile information
-		var id_token = googleUser.getAuthResponse().id_token;
-		var profile = googleUser.getBasicProfile();
-  
+		//var id_token = googleUser.getAuthResponse().id_token;
+		//var profile = googleUser.getBasicProfile();
 		// Send the ID token and profile information to your server for authentication
 	  }
 	</script>
